--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-    "name":            "shell-color",
-    "version":         "0.2.1",
-    "homepage":        "https://github.com/valaxy/shell-color",
-    "authors":         [
-        "valaxy <valaxy@qq.com>"
-    ],
-    "license":         "MIT",
-    "ignore":          [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "devDependencies": {
-        "jquery":    "~2.1.3",
-        "qunit":     "~1.18.0",
-        "requirejs": "~2.1.17"
-    }
+  "name": "shell-color",
+  "version": "1.0.0-dev",
+  "homepage": "https://github.com/valaxy/shell-color",
+  "authors": [
+    "valaxy <valaxy@qq.com>"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "devDependencies": {
+    "jquery": "~2.1.4",
+    "qunit": "~1.20.0",
+    "requirejs": "~2.1.21",
+    "cjs": "*"
+  }
 }
