--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "shell-color",
-  "version": "1.0.0-dev",
+  "version": "1.0.0-alpha",
   "homepage": "https://github.com/valaxy/shell-color",
   "authors": [
     "valaxy <valaxy@qq.com>"
@@ -17,6 +17,7 @@
     "jquery": "~2.1.4",
     "qunit": "~1.20.0",
     "requirejs": "~2.1.21",
-    "cjs": "*"
+    "cjs": "*",
+    "underscore": "~1.8.3"
   }
 }
