--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "shell-color",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-dev",
   "homepage": "https://github.com/valaxy/shell-color",
   "authors": [
     "valaxy <valaxy@qq.com>"
@@ -19,5 +19,8 @@
     "requirejs": "~2.1.21",
     "cjs": "*",
     "underscore": "~1.8.3"
+  },
+  "dependencies": {
+    "eventEmitter": "~4.3.0"
   }
 }
