update doc & update to 1.0.0-alpha

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shell-color",
-  "version": "1.0.0-dev",
+  "version": "1.0.0-alpha",
   "description": "",
   "main": "src/shell-color.js",
   "directories": {
@@ -25,8 +25,7 @@
     "cjs": "github:guybedford/cjs",
     "jquery": "^2.1.4",
     "qunitjs": "^1.20.0",
-    "requirejs": "^2.1.22",
-    "underscore": "^1.8.3"
+    "requirejs": "^2.1.22"
   },
   "dependencies": {
     "wolfy87-eventemitter": "^4.3.0"
