update to 1.0.1: change requirejs use of map to path config

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shell-color",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "src/shell-color.js",
+  "main": "index.js",
   "directories": {
     "doc": "doc",
     "test": "test"
