--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shell-color",
-  "version": "1.1.0-dev",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "directories": {
