--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shell-color",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "doc": "doc",
     "test": "test"
