--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "shell-color",
-  "version": "1.1.3",
-  "description": "",
-  "main": "src/index.js",
-  "directories": {
-    "doc": "doc",
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "2.0.0",
+  "description": "Javascript parse ANSI escape code and render to HTML",
+  "main": "dest/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/valaxy/shell-color.git"
+  },
+  "scripts": {
+    "watch": "webpack --config build/webpack.config.js --watch",
+    "build": "webpack --config build/webpack.config.js"
   },
   "author": "valaxy",
   "license": "MIT",
@@ -21,13 +18,10 @@
   },
   "homepage": "https://github.com/valaxy/shell-color",
   "devDependencies": {
-    "amd-loader": "github:valaxy/amd-loader",
-    "cjs": "github:valaxy/cjs",
-    "jquery": "^2.1.4",
-    "qunitjs": "^1.20.0",
-    "requirejs": "^2.1.22"
+    "qunitjs": "^2.4.0",
+    "webpack": "^3.5.5"
   },
   "dependencies": {
-    "wolfy87-eventemitter": "^4.3.0"
+    "wolfy87-eventemitter": "^5.2.2"
   }
 }
