--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shell-color",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Javascript parse ANSI escape code and render to HTML",
-  "main": "dest/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/valaxy/shell-color.git"
